automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -894,7 +894,7 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    neighbors_with_trip = neighbors.copy()\n",
-    "    neighbors_with_trip['distnace_from_selected'] = list(map(lambda neighbor: d))"
+    "    neighbors_with_trip['distnace_from_selected'] = list(map(lambda neighbor: distance_location(selected_individual, neighbor),neighbors))"
    ]
   },
   {
