automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -888,40 +888,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    neighbors_with_trip = neighbors.copy()\n",
-    "    neighbors_with_trip['distnace_from_selected'] = list(map(lambda neighbor: distance_location(selected_individual, neighbor),neighbors))"
+    "    neighbors_with_trip['distance_from_selected'] = list(map(lambda neighbor: distance_location(selected_individual, neighbor),neighbors))\n",
+    "    return neighbors_with_trip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'distance_from_selected': 0.23505256047318146,\n",
-       "  'pickup_latitude': 40.766931,\n",
-       "  'pickup_longitude': -73.982098,\n",
-       "  'trip_distance': 1.3},\n",
-       " {'distance_from_selected': 0.23505256047318146,\n",
-       "  'pickup_latitude': 40.77773,\n",
-       "  'pickup_longitude': -73.951902,\n",
-       "  'trip_distance': 4.5},\n",
-       " {'distance_from_selected': 0.23505256047318146,\n",
-       "  'pickup_latitude': 40.795678,\n",
-       "  'pickup_longitude': -73.971049,\n",
-       "  'trip_distance': 2.4}]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-2f8b2fe64dab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcleaned_trips\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdistance_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_trip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcleaned_trips\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-35-6a1960e86b55>\u001b[0m in \u001b[0;36mdistance_all\u001b[0;34m(selected_individual, neighbors)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdistance_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselected_individual\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mneighbors_with_trip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mneighbors_with_trip\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'distance_from_selected'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mneighbor\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdistance_location\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselected_individual\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneighbor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mneighbors_with_trip\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
     }
    ],
    "source": [
