--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -888,12 +888,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    return list(map(lambda neighbor: distance_location(selected_individual, neighbor),neighbors))\n",
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor),neighbors))\n",
     "\n",
     " #remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "   # return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
        "  'distance_from_selected': 0.24242215976473674}]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
