--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -893,10 +893,8 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor),neighbors))\n",
-    "\n",
-    " #remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
-    "   # return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
+    "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
    ]
   },
   {
