--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -888,28 +888,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
+    "    other_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), other_neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'trip_distance': 18.38,\n",
-       "  'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'distance_from_selected': 0.0},\n",
-       " {'trip_distance': 1.3,\n",
+       "[{'trip_distance': 1.3,\n",
        "  'pickup_latitude': 40.766931,\n",
        "  'pickup_longitude': -73.982098,\n",
        "  'distance_from_selected': 0.23505256047318146},\n",
@@ -923,7 +919,7 @@
        "  'distance_from_selected': 0.24242215976473674}]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
