automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -942,7 +942,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    "
+    "    list(map(lambda neighbor: ))"
    ]
   },
   {
